# SignalCraft

./: .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tickers.txt
app/: algo_trader.py  app.py  backtester.py  database.py
app/handlers/: data_handler.py  execution_handler.py  strategy_handler.py
app/models/: position.py  position_manager.py  signal.py  websocket_manager.py
app/static/css/: styles.css
app/strategies/: base.py  market_profile_strategy.py  markov_prediction_strategy.py  support_resistance_strategy.py  trend_following_strategy.py
app/templates/: backtest_dashboard.html  base.html  chart.html  dashboard.html
app/utils/: log_util.py
scripts/: create_and_seed_db.py
tests/: data_handler_test.py  generate_mock_data.py  mock_alpaca_broker.py  predictive_model.py  test_backtesting_system.py  test_trading.py  tickers.txt  utils.py
tests/data/: AAPL_1Day_data.db  QQQ_1Day_data.db  VIX_1Day_data.db  VIX_1Min_data.db  VXX_1Day_data.db  trades.db
